--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.MOV filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
+images/video/IMG_1761.mp4 filter=lfs diff=lfs merge=lfs -text
